# cmsaf-checker

./: .gitignore  README.md  pyproject.toml
scripts/: cli.py  download_gcmd_keywords.py
share/: cmsaf_metadata_standard.xml  cmsaf_metadata_standard_v3-0.xml  cmsaf_metadata_standard_v3-1.xml  instruments_v21.0.csv  platforms_v21.0.csv  providers_v21.0.csv  sciencekeywords_v21.0.csv
